--- a/Week12/index.html
+++ b/Week12/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="scripts/" defer></script>
+    <script src="scripts/script.js" defer></script>
     <link href="stylesheets/stylesheet.css" rel="stylesheet">
 </head>
 <body>
-
-    <ul class="shopping circleList">Remember to buy:</ul>
+    <button class="click-me">Click me !</button>
 </body>
 </html>
